# buoy

./: .gitignore  Cargo.toml  LICENSE  README.md  build-release.sh  cargo-sources.json  com.github.eppixx.buoy.json  com.github.eppixx.buoy.yaml  com.github.eppixx.buoy.yml  meson.build
.gitea/workflows/: test.yaml
.github/workflows/: flatpak-modules.yml  flatpak.yml  rust.yml
data/: bouy.css  buoy.css  launcher.desktop.in.in  meson.build  metadata.appdata.xml.in.in
data/icons/: meson.build
po/: POTFILES  README.md  com.github.eppixx.buoy.pot  de.po
po/extra/: de.po  extra.pot
src/: app.rs  cache.rs  client.rs  common.rs  config.rs.in  css.rs  download.rs  main.rs  mpris.rs  play_state.rs  play_status.rs  playback.rs  player.rs  resources.gresource.xml.in  settings.rs  subsonic.rs  subsonic_cover.rs  types.rs  views.rs  window_state.rs
src/common/: filter.rs  mod.rs  views.rs
src/components/: album_element.rs  album_tracks.rs  album_view.rs  albums.rs  albums_view.rs  app.rs  artist_element.rs  artist_view.rs  artists.rs  artists_view.rs  browser.rs  cover.rs  dashboard.rs  descriptive_cover.rs  equalizer.rs  filter_box.rs  filter_categories.rs  filter_row.rs  login_form.rs  login_window.rs  main_window.rs  mod.rs  play_controls.rs  play_info.rs  playlist_element.rs  playlist_tracks.rs  playlists_view.rs  queue.rs  seekbar.rs  sequence_button.rs  settings_window.rs  sort_by.rs  tracks_view.rs  volume_button.rs  warning_dialog.rs
src/components/sequence_button_impl/: mod.rs  repeat.rs  shuffle.rs
src/factory/: album_element.rs  album_row.rs  album_song.rs  album_track_row.rs  artist_row.rs  artist_song_row.rs  filter_row.rs  mod.rs  playlist_element.rs  playlist_row.rs  playlist_song.rs  playlist_tracks_row.rs  queue_item.rs  queue_song.rs  queue_song_row.rs  track_row.rs
src/gtk_helper/: color_scheme.rs  icon.rs  list_store.rs  loading_widget.rs  mod.rs  scroll.rs  stack.rs
