[package]
name = "buoy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# common components
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
anyhow = "1.0.98"

# core components
relm4 = "0.9.1"
granite = { version = "2.0.0", package = "granite-rs", features = ["v7_3"] }
submarine = { git = "https://github.com/eppixx/submarine", features = ["navidrome"] }
gstreamer = "0.23.5"
tokio = { version = "1.44.2", features = ["rt", "macros", "rt-multi-thread"]}
futures = "0.3.31"
async-channel = "2.3.1"
fuzzy-matcher = "0.3.7"
rand = "0.9.0"
itertools = "0.14.0"
clap = { version = "4.5.36", features = ["derive"] }
clap_derive = "4.5.32"
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }

#mpris
zbus = "5.5.0"
zvariant = "5.4.0"

# converting strings on seekbar
chrono = "0.4.40"

# used for loading and saving settings
serde = { version = "1.0.219", features = ["derive"] }
postcard = { version = "1.1.1", features = ["alloc"] }
rmp-serde = "1.3.0"
toml = "0.8.20"
dirs = "6.0.0"

# for validating urls
url = "2.5.4"

# desktop notifications
notify-rust = { version = "4.11.7", features = ["images"] }
image = "0.25.6"


[profile.release]
strip = "debuginfo"
lto = true
# overflow-checks = true

[profile.dev]
