[package]
name = "buoy"
version = "1.0.2"
edition = "2021"
authors = ["Thomas Eppers"]
description = "A GTK client for connecting, showing and playing from a subsonic music server"
readme = "Readme.md"
repository = "https://github.com/eppixx/buoy"
documentation = "https://docs.rs/buoy"
license = "MIT"
keywords = ["subsonic", "gtk", "music", "streaming", "client"]
categories = ["multimedia::audio"]

[dependencies]
# common components
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"]}
anyhow = "1.0.98"

# core components
relm4 = "0.9.1"
granite = { version = "2.0.0", package = "granite-rs", features = ["v7_3"] }
submarine = { version = "0.1.1", features = ["navidrome"] }
gstreamer = "0.23.6"
tokio = { version = "1.45.1", features = ["rt", "macros", "rt-multi-thread"]}
futures = "0.3.31"
async-channel = "2.3.1"
fuzzy-matcher = "0.3.7"
rand = "0.9.1"
itertools = "0.14.0"
clap = { version = "4.5.39", features = ["derive"] }
clap_derive = "4.5.32"
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }

#mpris
zbus = "5.7.1"
zvariant = "5.5.1"

# converting strings on seekbar
chrono = "0.4.41"

# used for loading and saving settings
serde = { version = "1.0.219", features = ["derive"] }
postcard = { version = "1.1.1", features = ["alloc"] }
rmp-serde = "1.3.0"
toml = "0.8.21"
dirs = "6.0.0"

# for validating urls
url = "2.5.4"

# desktop notifications
notify-rust = { version = "4.11.7", features = ["images"] }
image = "0.25.6"

keyframe = "1.1.1"

[profile.release]
strip = "debuginfo"
lto = true
# overflow-checks = true

[profile.dev]
